terraform/security_groups.tf
resource "aws_security_group" "ecs_tasks" {
  name = "${var.project_name}-ecs-tasks-sg"
  description = "Security group for ECS tasks"
  vpc_id = data.aws_vpc.myvpc.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-ecs-tasks-sg"
  }
}

resource "aws_security_group" "alb" {
  name = "${var.project_name}-alb-sg"
  description = "Security group ALB"
  vpc_id = data.aws_vpc.myvpc.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-slb-sg"
  }
}
